# AppMovil_Android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/ec/edu/eup/appmovil/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/2/: labelmapt.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ec/edu/eup/appmovil/: Autores.java  Camara.java  Camara1.java  Camara2.java  Camara4.java  Camara5.java  Camara6.java  Camara7.java  Camara8.java  Camera3.java  GalleryActivity.java  MainActivity.java  ViewPageAdapter.java
app/src/main/res/drawable/: camara.xml  circle_button.xml  flyt.xml  gallery.xml  pause_button.xml  play_button.xml  replay_button.xml  resolution.xml  video_camera_buton.xml
app/src/main/res/layout/: activity_autores.xml  activity_camara1.xml  activity_camara6.xml  activity_main.xml  item.xml  resolution.xml  video_item.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph2.xml  nav_graph3.xml  nav_graph4.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/ec/edu/eup/appmovil/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/java/: build.gradle  import-summary.txt
opencv/java/app/: build.gradle
opencv/java/gradle/wrapper/: gradle-wrapper.properties
opencv/java/src/org/opencv/android/: CameraBridgeViewBase.java
